# bmc-gnn

./: .gitignore  README.md  bmc_sequence.py  cosine_similarity.py  extract_bmc_engine.py  extract_frame_time.py  main.py  main_inductive.py  main_luby.py  most_similar_circuit.py  output.txt  pyproject.toml  unfold_circuit.py
bmc_gnn/: cosine_similarity.py  extract_bmc_engine.py  extract_frame_time.py  luby.py  most_similar_circuit.py  unfold_circuit.py  unfold_circuit_inductive.py
data/: .gitignore  bmc_data_circuits.txt  bmc_data_csv.tar.xz  chosen_circuits.txt  excluded_bmc_data_csv.tar.xz  gate_counts.csv  gate_counts.tsv  gate_counts.txt  mab_bmc_sat_circuits_reported.tar.xz  mab_bmc_sat_circuits_reported.txt  mab_bmc_unsat_circuits_reported.tar.xz  mab_bmc_unsat_circuits_reported.txt  model.pkl  test_data_csv.tar.xz  test_gate_counts.txt  train_data_csv.tar.xz
scripts/: bin_latches.py  bmc2_txt2csv.sh  bmc3_txt2csv.sh  create_embedding_db.mk  create_embedding_db.sh  dump_bmc_data.mk  max_depth.sh  mlr.py  remove_padding.py  rowavg_embedding.py  rowsum_embedding.py  unroll_circuit.sh
scripts/.ipynb_checkpoints/: mlr-checkpoint.py
